Fix the backbone modal z-index if we render tinyMCE via extension TinyMCE has link and help modal which z-index is 100100 and it's backdrop z-index is 100000 So we need to maintain our z-index like 100000 and backdrop z-index 99900

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -4052,7 +4052,7 @@ table.bar_chart {
 		width: 500px;
 		background: #fff;
 		margin-left: -250px;
-		z-index: 160000;
+		z-index: 100000;
 	}
 }
 
@@ -4065,7 +4065,7 @@ table.bar_chart {
 	min-height: 360px;
 	background: #000;
 	opacity: .7;
-	z-index: 159900;
+	z-index: 99900;
 }
 
 .wc-backbone-modal-main {
